--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,7 @@
-algamoney.seguranca.enable-https=true
+algamoney.seguranca.enable-https=false
+
+algamoney.origin-permitida=https://emiliocalvet-algamoney.herokuapp.com
+
+spring.datasource.url={JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_DATABASE_USERNAME}
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
