--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-algamoney.seguranca.enable-https=false
+algamoney.seguranca.enable-https=true
 
 algamoney.origin-permitida=https://emiliocalvet-algamoney.herokuapp.com
 
