--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 algamoney.seguranca.enable-https=true
 
-algamoney.origin-permitida=https://emiliocalvet-algamoney.herokuapp.com
+algamoney.origin-permitida=https://calvetmoney.herokuapp.com
 
 spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
